Fix sass compile failure.
错误如下
Error: File to import not found or unreadable: [node_modules]/han-css/main.
       Parent style sheet: /Users/quanbrew/Development/ioover.net/blog/_sass/main.scss
        on line 1 of _sass/main.scss
>> @import '[node_modules]/han-css/main'

--- a/src/sass/inline/_jiya.sass
+++ b/src/sass/inline/_jiya.sass
@@ -70,7 +70,9 @@ h-char.bd-consecutive
     &:lang(zh-HK):before
       display: none
 
-  @at-root h-cs.jiya-outer[prev*='bd-cop'],
+  @at-root h-cs.jiya-outer[prev*='bd-cop']
+    display: none
+
   @at-root h-cs.jiya-outer.bd-end
     &:lang(zh-Hant),
     &:lang(zh-TW),
